SERVER-126395 Fix join optimizer crash when $lookup as-field prefixes a let variable path (#54905)

GitOrigin-RevId: 078691093e5e3d9ef5136a4cb1e26e3f2776553f